# python_blmc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  calibrate.py  check_sequence.py  foot_pos_ctrl.py  forward_kinematic.py  get_motor_info.py  init_position.py  measure_msg_freq.py  move_leg_sine.py  optoforce_velctrl.py  package.xml  plot.py  position_ctrl.py  read_optoforce.py  setup.cfg  setup.py  test_speed.py  velctrl.py
blmc/: can_helper.py  controllers.py  conversion.py  helper.py  kinematic_leg1.py  motor_data.py  optoforce.py  pid.py
doc/: example_scripts.md
scripts/: calibration_data.p  forward_kinematic.py  get_motor_info.py  init_position.py  leg_calibrate.py  leg_compute_kinematic.py  leg_foot_pos_ctrl.py  leg_init_position.py  leg_move_sine.py  leg_plot_logged_data.py  measure_msg_freq.py  plot.py  position_ctrl.py  read_optoforce.py  velocity_ctrl.py
src/blmc/: pid.py
