<?xml version="1.0"?>
<package>
  <name>python_blmc</name>
  <version>1.0.0</version>
  <description>
    The `blmc` package contains an API for the CAN interface of the
    motor control microcontroller of the Brushless Motor Control Project as
    well as the OptoForce sensor.

    The scripts use this API for several tasks like evaluating the CAN
    interface, displaying motor parameters or running simple velocity/position
    controllers.

    This only works with the *dual_motor_torque_ctrl* code running on the
    board.
  </description>

  <license>BSD 3-clause</license>

  <author email="felix.widmaier@tue.mpg.de">Felix Widmaier</author>
  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>python-can</run_depend>

</package>
