[develop]
script-dir=$base/lib/python_blmc
[install]
install-scripts=$base/lib/python_blmc

[metadata]
name = python_blmc
version = attr: blmc.__version__
description = Pure-Python API for controlling ODRI motor boards via CAN.
long_description = file: README.md
long_description_content_type = text/markdown
author = Felix Widmaier
author_email = felix.widmaier@tue.mpg.de
license = BSD 3-Clause License
license_files = LICENSE
url = https://github.com/open-dynamic-robot-initiative/python_blmc
project_urls =
    Source Code = https://github.com/open-dynamic-robot-initiative/python_blmc
    Bug Tracker = https://github.com/open-dynamic-robot-initiative/python_blmc/issues
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    python-can

scripts =
    scripts/get_motor_info.py
    scripts/leg_calibrate.py
    scripts/leg_compute_kinematic.py
    scripts/leg_foot_pos_ctrl.py
    scripts/leg_init_position.py
    scripts/leg_move_sine.py
    scripts/leg_plot_logged_data.py
    scripts/measure_msg_freq.py
    scripts/position_ctrl.py
    scripts/read_optoforce.py
    scripts/velocity_ctrl.py

[options.data_files]
share/ament_index/resource_index/packages = resource/python_blmc
share/python_blmc = package.xml
